# ASCII-Renderer

./: README.md  main.py  renderer.py  shader.py  textures.py  vectors.py
cpp/: CMakeLists.txt  README.md
cpp/src/: main.cpp  renderer.h  shader.h  textures.cpp  textures.h  time_manager.cpp  time_manager.h  vectors.h
cpp/src/shaders/: funny_shader.h  shadertoy_example.h
python/: README.md  main.py
python/src/: renderer.py  textures.py  vectors.py
python/src/shaders/: funny_shader.py  shadertoy_example.py
